// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Message closable 1`] = `
<Message
  closable={true}
  hasArrow={false}
  theme="primary"
>
  <div
    className="za-message za-message--primary"
    onClick={[Function]}
  >
    <div
      className="za-message__header"
    />
    <div
      className="za-message__body"
    >
      foo
    </div>
    <div
      className="za-message__footer"
    >
      <ForwardRef(SvgClose)
        onClick={[Function]}
      >
        <Icon
          component={[Function]}
          onClick={[Function]}
          prefixCls="za-icon"
          size="md"
          theme="default"
          viewBox="0 0 32 32"
        >
          <i
            className="za-icon za-icon--default za-icon--md"
            onClick={[Function]}
            size="md"
            theme="default"
          >
            <component
              fill="currentColor"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable={false}
                height="1em"
                viewBox="0 0 1000 1000"
                width="1em"
              >
                <path
                  d="M560.149 501.223l255.344 255.344c16.272 16.272 16.272 42.654 0 58.926s-42.654 16.272-58.926 0L501.223 560.149 245.88 815.493c-16.272 16.272-42.654 16.272-58.925 0-16.272-16.272-16.272-42.654 0-58.926l255.344-255.344L186.954 245.88c-16.272-16.272-16.272-42.654 0-58.925 16.271-16.272 42.653-16.272 58.925 0l255.344 255.344 255.344-255.344c16.272-16.272 42.654-16.272 58.926 0 16.272 16.271 16.272 42.653 0 58.925L560.149 501.223z"
                  fillRule="nonzero"
                />
              </svg>
            </component>
          </i>
        </Icon>
      </ForwardRef(SvgClose)>
    </div>
  </div>
</Message>
`;

exports[`Message hasArrow 1`] = `
<div
  className="za-message za-message--primary za-message--link"
  onClick={[Function]}
>
  <div
    className="za-message__header"
  />
  <div
    className="za-message__body"
  >
    foo
  </div>
  <div
    className="za-message__footer"
  >
    <ForwardRef(SvgArrowRight) />
  </div>
</div>
`;

exports[`Message icon 1`] = `
<div
  class="za-message za-message--primary"
>
  <div
    class="za-message__header"
  >
    <div
      class="za-message__icon"
    >
      <img
        alt=""
        src="\\\\\\\\static.zhongan.com/website/health/zarm/images/icons/state.png"
      />
    </div>
  </div>
  <div
    class="za-message__body"
  >
    foo
  </div>
</div>
`;

exports[`Message renders correctly 1`] = `
<div
  class="za-message za-message--primary"
>
  <div
    class="za-message__header"
  />
  <div
    class="za-message__body"
  >
    foo
  </div>
</div>
`;

exports[`Message theme 1`] = `
<div
  class="za-message za-message--danger"
>
  <div
    class="za-message__header"
  />
  <div
    class="za-message__body"
  >
    foo
  </div>
</div>
`;
